finish last details

--- a/encyclopedia/templates/encyclopedia/not-found.html
+++ b/encyclopedia/templates/encyclopedia/not-found.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block body %}
-    <h2>The entry you are looking for doesn't exist</h2>
+    <h3>We couldn’t find the entry you were looking for.</h3>
 {% endblock %}
